<resources>
    <string name="app_name">FinalProjectAIBetter</string>
    <string name="recent">Recent</string>
    <string name="image_recent_receivers">image recent receivers</string>
    <string name="recent_transfers">Recent Transfers</string>
    <string name="logo">Logo</string>
    <string name="balance_page_icon">Balance Page Icon</string>
    <string name="cards_icon">cards icon</string>
    <string name="transfers_icon">Transfers Icon</string>
    <string name="products_icon">products icon</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="balance">Balance</string>
    <string name="_1000">1000</string>
    <string name="currency">€</string>
    <string name="closing_arrow_back_to_main_menu">Closing arrow back to main menu</string>
    <string name="how_much_text">How much would you like to transfer?</string>
    <string name="balance_text">Your balance is: €</string>
    <string name="amount_hint">€ 0.00</string>
    <string name="cards_title">Cards</string>
    <string name="card_image">card image</string>
    <string name="card_holder_example">Gabriel R Costa</string>
    <string name="encrypted_code">**** **** ****</string>
    <string name="last_digits_card_string">1234</string>
    <string name="title_products">Products</string>
    <string name="confirmation_arrow">Confirmation Arrow</string>
    <string name="sequence_of_several_icons">Sequence of several icons</string>
    <string name="current_account">Current Account</string>
    <string name="borrow">Borrow</string>
    <string name="credit_card">Credit Card</string>
    <string name="mortgage">Mortgage</string>
    <string name="savings">Savings</string>
    <string name="insurance">Insurance</string>
    <string name="my_applications_button">My Applications</string>
    <string name="settings_head">Settings</string>
    <string name="sending_amount">You are sending €%1$s to %2$s</string>
    <string name="sent_amount_to">You sent €%1$s to %2$s</string>
    <string name="add_contact_buttom">add contact buttom</string>
    <string name="contacts">Contacts List</string>
    <string name="recent_tranfers">Recent Tranfers</string>
    <string name="account_id">Account ID:</string>
    <string name="search">Search</string>
    <string name="add_contact">Add Contact</string>
    <string name="account_id_does_not_match_any_account">Account Id does not match any Account</string>
    <string name="would_you_like_to_add">Would you like to add</string>
    <string name="username">UserName</string>
    <string name="_6_dig_code_eg_123456">6 dig Code. Eg: 123456</string>
    <string name="selected_user">Selected User</string>
    <string name="gabriel">Gabriel</string>
    <string name="date_time">date/time</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="icon_transfer">icon transfer</string>
    <string name="_01_01_2024">01/01/2024</string>
    <string name="id123">ID123</string>
    <string name="recipient_thais_ferreira">Recipient: Thais Ferreira</string>
    <string name="card_logo">card logo</string>
    <string name="your_card_is_frozen"> Card Frozen</string>
    <string name="freeze_my_card">freeze my card</string>
    <string name="show_my_pin">Show my PIN</string>
    <string name="cancel_my_card">Cancel My Card</string>
    <string name="replace_my_card">Replace My Card</string>
    <string name="new_card_requested_successfully">New card requested successfully!</string>
    <string name="reveal_pin">Reveal Pin</string>
    <string name="card_canceled_successfully_your_next_step_is_to_request_a_new_card">Card Canceled Successfully, Your next step is to request a new card.</string>
    <string name="contact_support">Contact Support</string>
    <string name="aib_phone_internet_banking">AIB Phone Internet Banking</string>
    <string name="_081_872_4724">081 872 4724</string>
    <string name="outside_ireland">Outside Ireland:</string>
    <string name="_353_1771_2424">+353 1771 2424</string>
    <string name="opening_hours">Opening Hours:</string>
    <string name="mon_sun_09_00_to_17_00">Mon – Sun: 09:00 to 17:00</string>
    <string name="view_messages">View Messages</string>
    <string name="there_are_no_messages_to_be_displayed">There are no messages to be displayed</string>
    <string name="developed_by_gabriel_costa">Developed by: Gabriel Costa</string>
    <string name="initial_amount">Initial Savings Amount</string>
    <string name="monthly_savings">Monthly savings</string>
    <string name="forecast_period_months">Saving Period (months)</string>
    <string name="calculate_forecast">Calculate Forecast</string>
    <string name="forecast_result_will_appear_here">Forecast result will be displayed here</string>
    <string name="search_user">Enter UserID</string>
    <string name="send_money">Send Money</string>
    <string name="budget_forecast">Budget Forecast</string>
    <string name="add_a_contact">Add a Contact</string>
    <string name="statement">Statement</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="signup">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="user_id">User ID</string>
</resources>