<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/even_darker_purple"
    tools:context=".TransferActivity">

    <ImageView
        android:id="@+id/close_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_arrow"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/closing_arrow_back_to_main_menu" />

    <TextView
        android:id="@+id/transfer_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/how_much_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_arrow" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:text="@string/balance_text"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/transfer_text"
        app:layout_constraintTop_toBottomOf="@+id/transfer_text" />

    <TextView
        android:id="@+id/balance_text_att"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1000"
        android:textColor="@color/white"
        android:layout_margin="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="TODO" />

    <ImageView
        android:id="@+id/transfer_confirm_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/arrow_forward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:contentDescription="@string/confirmation_arrow" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/home_balance_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/balance_page_icon"
            android:src="@drawable/baseline_account_balance_24" />

        <ImageView
            android:id="@+id/tranfers_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/transfers_icon"
            android:src="@drawable/pay_transfer" />

        <ImageView
            android:id="@+id/cards_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/cards_icon"
            android:src="@drawable/cards_icon" />

        <ImageView
            android:id="@+id/products_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/products_icon"
            android:src="@drawable/products_icon" />

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/settings_icon"
            android:src="@drawable/settings_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>