<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aibetterlogo"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings_head"
        app:titleTextColor="@color/african_violet"
        app:titleMarginStart="158dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContactSupport"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/contact_support"
                android:textColor="@color/white"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_aib_contact"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone"
                android:backgroundTint="@color/gray">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/aib_phone_internet_banking"
                        android:textStyle="bold"
                        android:textColor="@color/african_violet"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/_081_872_4724"
                        android:textColor="@color/african_violet"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/outside_ireland"
                        android:textStyle="bold"
                        android:textColor="@color/african_violet"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/_353_1771_2424"
                        android:textColor="@color/african_violet"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/opening_hours"
                        android:textStyle="bold"
                        android:textColor="@color/african_violet"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/mon_sun_09_00_to_17_00"
                        android:textColor="@color/african_violet"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_messages"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/view_messages"
                android:textColor="@color/white"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_aib_message"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone"
                android:backgroundTint="@color/gray">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/there_are_no_messages_to_be_displayed"
                        android:textSize="20sp"
                        android:textColor="@color/african_violet"
                        android:textAlignment="center" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developed_by_gabriel_costa"
                android:textColor="@color/african_violet"
                android:gravity="center"
                android:layout_marginTop="16dp"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/home_balance_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/balance_page_icon"
            android:src="@drawable/new_account_balance_24" />

        <ImageView
            android:id="@+id/tranfers_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/transfers_icon"
            android:src="@drawable/new_double_arrow_24" />

        <ImageView
            android:id="@+id/cards_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/cards_icon"
            android:src="@drawable/new_credit_card_24" />

        <ImageView
            android:id="@+id/products_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/products_icon"
            android:src="@drawable/outline_shopping_cart_24" />

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/settings_icon"
            android:src="@drawable/new_settings_24" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>