<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/even_darker_purple"
    tools:context=".CardManagerActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:titleMarginStart="174dp"
        android:title="@string/cards_title"
        android:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/card_view"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="350dp"
        android:layout_height="220dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/card_image"
        android:scaleType="centerCrop"
        android:src="@drawable/card_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/logo_card"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/aib_logo_white"
        android:layout_marginHorizontal="29dp"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="@+id/card_view"
        android:contentDescription="@string/card_logo" />

    <TextView
        android:id="@+id/card_holder_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/card_holder_example"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="@id/card_view"
        app:layout_constraintTop_toTopOf="@+id/card_view"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/encrypted_digits_card"
        android:layout_width="160dp"
        android:layout_height="24dp"
        android:text="@string/encrypted_code"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/card_holder_name"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="@+id/card_view"
        app:layout_constraintVertical_bias="0.775" />

    <TextView
        android:id="@+id/last_digits_card"
        android:layout_width="54dp"
        android:layout_height="24dp"
        android:text="@string/last_digits_card_string"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/encrypted_digits_card"
        app:layout_constraintStart_toEndOf="@+id/encrypted_digits_card"
        app:layout_constraintTop_toTopOf="@+id/encrypted_digits_card" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/frozen_card_text"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_card_is_frozen"
        android:textColor="@color/gray"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/freeze_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/freeze_card"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/freeze_my_card"
        app:layout_constraintBottom_toTopOf="@id/show_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show_pin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_my_pin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cancel_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_card"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_my_card"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/replace_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/replace_card"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/replace_my_card"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/home_balance_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/balance_page_icon"
            android:src="@drawable/baseline_account_balance_24" />

        <ImageView
            android:id="@+id/tranfers_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/transfers_icon"
            android:src="@drawable/pay_transfer" />

        <ImageView
            android:id="@+id/cards_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/cards_icon"
            android:src="@drawable/cards_icon" />

        <ImageView
            android:id="@+id/products_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/products_icon"
            android:src="@drawable/products_icon" />

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/settings_icon"
            android:src="@drawable/settings_icon" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/overlay_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/even_darker_purple"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.MaterialComponents.Button"
                android:text="@string/new_card_requested_successfully"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/pin_overlay_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:background="@color/even_darker_purple"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/pin_shown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_1000"
                android:visibility="invisible"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reveal_pin_button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                style="@style/Widget.MaterialComponents.Button"
                android:text="@string/reveal_pin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/card_canceled_overlay"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/even_darker_purple"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/card_canceled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.MaterialComponents.Button"
                android:text="@string/card_canceled_successfully_your_next_step_is_to_request_a_new_card"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>
    </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>