<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/even_darker_purple"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/transferIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/pay_transfer"
            android:contentDescription="@string/icon_transfer" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_01_01_2024"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/textViewTransactionId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id123"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <TextView
                android:id="@+id/textViewRecipient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipient_thais_ferreira"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1000"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white"
            android:layout_margin="16dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
